--- a/style.css
+++ b/style.css
@@ -25,3 +25,28 @@ header ul li a{
     text-decoration: none;
     
 }
+
+.container{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: stretch;
+
+}
+
+.about-left{
+    background-color: yellowgreen;
+    height: 300px;
+    width: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about-right{
+    background-color: blueviolet;
+    height: 300px;
+    width: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
