--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ header ul li a{
 
 .about-left{
     background-color: yellowgreen;
-    height: 300px;
+    height: 550px;
     width: 500px;
     display: flex;
     justify-content: center;
@@ -44,9 +44,24 @@ header ul li a{
 
 .about-right{
     background-color: blueviolet;
-    height: 300px;
+    height: 550px;
     width: 500px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
+footer{
+    background-color: black;
+    color: #fff;
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
